@@ -488,7 +488,10 @@ extern "C" {
 
 #ifndef __IOleObject_INTERFACE_DEFINED__
 #define __IOleObject_INTERFACE_DEFINED__
+#ifndef _LPOLEOBJECT_DEFINED
+#define _LPOLEOBJECT_DEFINED
   typedef IOleObject *LPOLEOBJECT;
+#endif
 
   typedef enum tagOLEGETMONIKER {
     OLEGETMONIKER_ONLYIFTHERE = 1,OLEGETMONIKER_FORCEASSIGN = 2,OLEGETMONIKER_UNASSIGN = 3,OLEGETMONIKER_TEMPFORUSER = 4
